client/src/components/common/menu.scss
$menuBorderColor: #d9d9d9;
$menuBodyBackgroundColor: aqua;


.usermenu{
    position: relative;

    &__button{
        width: 40px;
        height: 40px;
        border-radius: 100%;
        border:none;
        overflow: hidden;
    }

    &__body{
        display: none;
        width: 150px;
        background-color: $menuBodyBackgroundColor;
        position: absolute;
        left: 20px;
        top:50px;
        border: 1px solid $menuBorderColor;
        box-shadow: 0 2px 3px 0 rgb(0 0 0 / 16%);
        z-index: 999;
    }

    &.active &__body {
        display: block;
    }

    .menu-item{
        cursor:pointer;
        padding: .30rem 1rem;
        &:hover{
            background-color: rgb(0 0 0 / 5%);
        }
    }

}

